syntax = "proto3";

package temperature;

option go_package = "github.com/mispice/TempConv-gRPC/proto";

// Temperature conversion service
service TemperatureConverter {
  // Convert Fahrenheit to Celsius
  rpc ConvertToFahrenheit(TemperatureRequest) returns (TemperatureResponse) {}
  
  // Convert Celsius to Fahrenheit
  rpc ConvertToCelsius(TemperatureRequest) returns (TemperatureResponse) {}
}

// Request message containing temperature value
message TemperatureRequest {
  double value = 1;
}

// Response message with converted temperature
message TemperatureResponse {
  double value = 1;
  string unit = 2;
  string formula = 3;
}
